[tool.poetry]
name = "ms-graph-exporter"
version = "0.1.0-rc.2"
description = "A distributed Celery application to export time-domain data periodically from Microsoft Graph API into a buffer key-value store."

authors = ["Oleksiy Kuzmenko <oleksiy.kuzmenko@undp.org>"]

readme = "README.md"
license = "MIT"
documentation = "https://msgraphexporter.readthedocs.io/en/latest/"

repository = "https://github.com/undp/MsGraphExporter"
homepage = "https://github.com/undp/MsGraphExporter"

include = [
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "LICENSE.md",
  "docker/*",
  "docs/conf.py",
  "docs/*.rst",
  "docs/*.md",
  "tests/*.py",
  "tox.ini",
]

keywords = [
  "development",
  "monitoring",
  "microsoft graph",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Environment :: No Input/Output (Daemon)",
  "Topic :: System :: Monitoring",
]

[tool.poetry.dependencies]
python = "^3.6"

adal = "^1.2"
celery= "^4.3"
celery-redbeat = "^0.13"
gevent = "^1.4"
pyyaml = "^3.13"
redis = "^3.3"
typing = "^3.7"

# TODO:20190912:001
#   pytest-dockerc requires docker-compose (>=1.17.1) which in turn requires
#   requests (<2.21)
requests = "^2.20"

# docs
recommonmark = {version = "^0.5.0", optional = true}
sphinx = {version = "^2.2", optional = true}
sphinx-rtd-theme = {version = "^0.4", optional = true}
sphinx-autodoc-typehints = {version = "^1.8", optional = true}

# test
pytest = {version = "^5.1", optional = true}
pytest-benchmark = {version = "^3.2", extras = ["aspect"], optional = true}
pytest-cov = {version = "^2.7", optional = true}
pytest-dockerc = {version = "^1.0", optional = true}
pytest-instafail = {version = "^0.4", optional = true}
pytest-lazy-fixture = {version = "^0.5", optional = true}
pytest-random-order = {version = "^1.0", optional = true}

# REFACTOR:20190918:01
#   get sensitive values from ENV, instead of `variables` fixture
pytest-variables = {version = "^1.8", extras = ["yaml"], optional = true}

[tool.poetry.extras]
docs = [
  "recommonmark",
  "sphinx",
  "phinx-rtd-theme",
  "sphinx-autodoc-typehints",
]

test = [
  "pytest",
  "pytest-benchmark",
  "pytest-cov",
  "pytest-dockerc",
  "pytest-instafail",
  "pytest-lazy-fixture",
  "pytest-random-order",
  "pytest-variables",
]

[tool.poetry.dev-dependencies]
bump2version = "^0.5"
gitchangelog = "^3.0"
pre-commit = "^1.18"
pystache = "^0.5"
tox = "^3.14"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  |  \.tox
  | \.pytest_cache
  | __pycache__
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
